fix put functionality for backend
