# backend/src/controllers/activity_controller.py
@@ -1,17 +1,25 @@
+from flask import request
+
 from services import activity_service
 
 
 def get_activity(id):
-    return activity_service.get_by_id(id)
+    activity = activity_service.get_by_id(id)
+    return activity.to_full_dict()
 
 
 def create_connection():
-    pass
+    body = request.json
+    created_activity = activity_service.create(body)
+    return created_activity.to_dict()
 
 
-def update_connection():
-    pass
+def update_connection(id):
+    body = request.json
+    updated_activity = activity_service.update(id, body)
+    return updated_activity.to_dict()
 
 
-def delete_connection():
-    pass
+def delete_connection(id):
+    activity_service.delete(id)
+    return 200
