# backend/src/models/activity.py
@@ -10,13 +10,28 @@ class Activity(BaseEntity):
 
     sheet_helper = ApiSheetHelper(__tablename__)
 
-    person_id = db.Column(UUIDType, db.ForeignKey('person.id'))
-    event_id = db.Column(UUIDType, db.ForeignKey('event.id'))
+    person_id = db.Column(UUIDType(binary=False), db.ForeignKey('person.id'))
+    event_id = db.Column(UUIDType(binary=False), db.ForeignKey('event.id'))
     position = db.Column(db.String, nullable=False)
     contribution = db.Column(db.Text)
 
     event = relationship("Event", back_populates="activities")
     person = relationship("Person", back_populates="activities")
+
+    types = {
+        **BaseEntity.types,
+        'person_id': 'id',
+        'event_id': 'id'
+    }
+
+    @classmethod
+    def get_key(cls, key):
+        if key == 'personId':
+            return 'person_id'
+        elif key == 'eventId':
+            return 'event_id'
+        else:
+            return key
 
     @classmethod
     def filter_data(cls, dataframe):
@@ -26,8 +41,8 @@ class Activity(BaseEntity):
     def to_dict(self):
         return {
             **super(Activity, self).to_dict(),
-            'personId': str(self.person_id),
-            'eventId': str(self.event_id),
+            'personId': self.transform_field('id', self.person_id),
+            'eventId': self.transform_field('id', self.event_id),
             'position': self.position,
             'contribution': self.contribution
         }
@@ -42,4 +57,11 @@ class Activity(BaseEntity):
         return {
             **self.to_dict(),
             'person': self.person.to_short_dict()
+        }
+
+    def to_full_dict(self):
+        return {
+            **self.to_dict(),
+            'person': self.person.to_short_dict(),
+            'event': self.event.to_dict()
         }
